--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,8 @@ image:
 
 tasks:
   - init: |
-      mkdir -p /opt/spark/
-      wget https://dlcdn.apache.org/spark/spark-3.5.1/spark-3.5.1-bin-hadoop3.tgz -P /opt/spark/
-      mkdir -p /opt/kafka/
-      wget https://downloads.apache.org/kafka/3.8.0/kafka-3.8.0-src.tgz -P /opt/kafka/
+      
+      sudo mkdir -p /opt/spark/
+      sudo wget https://dlcdn.apache.org/spark/spark-3.5.1/spark-3.5.1-bin-hadoop3.tgz -P /opt/spark/
+      sudo mkdir -p /opt/kafka/
+      sudo wget https://downloads.apache.org/kafka/3.8.0/kafka-3.8.0-src.tgz -P /opt/kafka/
