--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ image:
 
 tasks:
   - init: |
-      
+      go install sigs.k8s.io/kind@v0.23.0
       sudo mkdir -p /opt/spark/
       sudo wget https://dlcdn.apache.org/spark/spark-3.5.1/spark-3.5.1-bin-hadoop3.tgz -P /opt/spark/
       sudo mkdir -p /opt/kafka/
